--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "http-server dist",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "build-serve": "npm run build && npm run serve"
+    "build-serve": "npm run build && npm run serve",
+    "build-image": "node sharp.js"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -30,10 +31,14 @@
     "fake-indexeddb": "^4.0.2",
     "html-webpack-plugin": "^5.6.0",
     "http-server": "^14.1.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "sharp": "^0.33.4",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.2",
     "webpack-merge": "^5.10.0",
