--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "build-serve": "npm run build && npm run serve",
-    "build-image": "node sharp.js"
+    "build-image": "node sharp.js",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -23,6 +24,7 @@
     "babel-jest": "^29.6.1",
     "babel-loader": "^8.3.0",
     "clean-webpack-plugin": "^4.0.0",
+    "codeceptjs": "^3.6.4",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.11.0",
     "eslint": "^8.57.0",
@@ -35,6 +37,7 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "playwright": "^1.44.1",
     "sharp": "^0.33.4",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
