--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "codeceptjs": "^3.6.4",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.11.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
