--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "mini-css-extract-plugin": "^2.9.0",
     "playwright": "^1.44.1",
     "sharp": "^0.33.4",
     "style-loader": "^3.3.4",
@@ -51,6 +52,7 @@
   },
   "dependencies": {
     "idb": "^8.0.0",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.14.1",
     "workbox-window": "^7.1.0"
   }
